--- a/index.html
+++ b/index.html
@@ -9,18 +9,16 @@
 <body>
     <section class="info-box">
         <div class="avatar-container">
-            <img src="Screenshot_20231119-211041_Gallery.jpg" alt="Your Photo">
+            <img src="Screenshot_20231201_003311_TikTok.jpg" alt="Your Photo">
         </div>
         <h2>T1dy</h2>
         <div class="line"></div>
         <div class="content">
             <h2>Обо мне</h2>
             <p class="white-text">
-                Мой никнейм в майнкрафт: T1dy_<br>
-                Кроме майнкрафта играю в Rust, Dota 2.<br>
-                Учу языки программирования как: Python, Java, JavaScript. Иногда делаю сайты.<br>
-                К примеру этот сайт был написан с нуля мною.<br>
-                <З
+                Мой никнейм в майнкрафт: Oleg_Kot<br>
+                Кроме майнкрафта играю в Rust, Fortnite<br>
+                Почти всегда страдаю фигнёй.
             </p>
         </div>
     </section>
