--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=5.0">
     <link rel="stylesheet" href="style.css">
-    <title>T1dy - Карточка</title>
+    <title>Oleg_Kot - Карточка</title>
 </head>
 <body>
     <section class="info-box">
