--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="avatar-container">
             <img src="Screenshot_20231201_003311_TikTok.jpg" alt="Your Photo">
         </div>
-        <h2>T1dy</h2>
+        <h2>Oleg_Kot</h2>
         <div class="line"></div>
         <div class="content">
             <h2>Обо мне</h2>
