--- a/index.html
+++ b/index.html
@@ -2,25 +2,160 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=5.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Oleg_Kot - Карточка</title>
+    <link rel="icon" href="image.png">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="image.png">
+    <meta charset="UTF-8">
+    <meta property="og:type" content="website">
+    <meta content="summary_large_image" name="twitter:card">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins:400,300,500">
+    <style>
+        html {
+            box-sizing: border-box;
+            height: 100%;
+        }
+
+        *,
+        *:before,
+        *:after {
+            box-sizing: inherit;
+        }
+
+        body {
+            margin: 0;
+            padding: 0;
+            font-size: 21px;
+            background: linear-gradient(to right, #1CB5E0, #13ca03);
+            color: #fff;
+            font-family: "Poppins", sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        .content {
+            text-align: center;
+            opacity: 0;
+            animation: fadeIn 1s ease-in-out 1s forwards;
+        }
+
+        button {
+            width: 165px;
+            height: 62px;
+            cursor: pointer;
+            color: #fff;
+            font-size: 17px;
+            border-radius: 1rem;
+            border: none;
+            position: relative;
+            background: #100720;
+            transition: 0.1s;
+        }
+
+        button::after {
+            content: "";
+            width: 100%;
+            height: 100%;
+            background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255, 94, 247, 1) 17.8%, rgba(2, 245, 255, 1) 100.2%);
+            filter: blur(15px);
+            z-index: -1;
+            position: absolute;
+            left: 0;
+            top: 0;
+        }
+
+        button:active {
+            transform: scale(0.9) rotate(3deg);
+            background-image: radial-gradient(circle farthest-corner at 10% 20%, rgba(255, 94, 247, 1) 17.8%, rgba(2, 245, 255, 1) 100.2%);
+            transition: 0.5s;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+            }
+
+            to {
+                opacity: 1;
+            }
+        }
+
+        @media all and (max-width: 1100px) {
+            body {
+                padding: 96px 48px 24px;
+            }
+
+            section.card {
+                min-width: 100%;
+            }
+
+            section.card .text-content {
+                width: 100%;
+            }
+        }
+
+        @media all and (max-width: 720px) {
+            body {
+                padding: 48px 24px 0;
+            }
+
+            section.card {
+                margin: 64px 0;
+                padding: 88px 36px 36px;
+                flex-direction: column;
+                border-radius: 24px;
+            }
+
+            section.card .text-content h3 {
+                max-width: calc(100% - 150px);
+                font-size: 1em;
+            }
+
+            section.card .text-content p,
+            section.card .text-content a {
+                font-size: 0.8em;
+            }
+
+            section.card .visual {
+                width: 150px;
+                height: 150px;
+                right: 16px;
+                left: auto;
+                border-radius: 50%;
+            }
+
+            section.card .visual img {
+                width: 100%;
+                height: auto;
+            }
+        }
+    </style>
+    <title>Oleg - Карточка</title>
 </head>
+
 <body>
-    <section class="info-box">
-        <div class="avatar-container">
-            <img src="Screenshot_20231201_003311_TikTok.jpg" alt="Your Photo">
-        </div>
-        <h2>Oleg_Kot</h2>
-        <div class="line"></div>
-        <div class="content">
-            <h2>Обо мне</h2>
-            <p class="white-text">
-                Мой никнейм в майнкрафт: Oleg_Kot<br>
-                Кроме майнкрафта играю в Rust, Fortnite<br>
-                Почти всегда страдаю фигнёй.
-            </p>
-        </div>
-    </section>
+    <div class="content">
+        <h1>Oleg</h1>
+        <p>Мой никнейм в майнкрафт: Oleg_Kot<br>
+            Кроме майнкрафта играю в Fortnite, Rust.<br>
+            <p></p>
+        <button class="button" onclick="window.location.href='https://steamcommunity.com/profiles/76561199487787968/'">Мой стим</button>
+    </div>
+
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            document.querySelector('.content').style.opacity = 1;
+        });
+    </script>
 </body>
+
 </html>
