--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="image.png">
+    <link rel="icon" href="Screenshot_20231201_003311_TikTok.jpg">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="image.png">
+    <link rel="icon" href="Screenshot_20231201_003311_TikTok.jpg">
     <meta charset="UTF-8">
     <meta property="og:type" content="website">
     <meta content="summary_large_image" name="twitter:card">
