--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
 <body>
     <div class="content">
-        <h1>Oleg_Furry</h1>
+        <h1>Oleg</h1>
         <p>Мой никнейм в майнкрафт: Oleg_Kot<br>
             Кроме майнкрафта играю в Fortnite, Rust.<br>
             <p></p>
